--- a/OS/process_parameters.ipynb
+++ b/OS/process_parameters.ipynb
@@ -80,7 +80,7 @@
     }
    ],
    "source": [
-    "print_details(\"get env:\",os.getenv('CONDA_EXE'))"
+    "#print_details(\"get env:\",os.getenv('CONDA_EXE'))"
    ]
   },
   {
